--- a/resources/js/components/ctf.scss
+++ b/resources/js/components/ctf.scss
@@ -29,7 +29,7 @@
 }
 
 .ctf {
-  background-image: url("/img/futurama.jpg");
+  background-image: url("public/img/futurama.jpg");
   font-family: "Futurama Title Font", Monaco, monospace;
   width: 100%;
   min-height: 550px !important;
